# ReCreations

./: CMakeLists.txt  README.md  Recreation.h  main.c  main.cpp  style_prompt.txt
.cache/clangd/index/: Recreation.h.AA0D015B8C8252D9.idx  main.cpp.611DDEF429939580.idx  memory.hpp.AD628B60A5C58152.idx  types.h.307AB5C2AA87E2AD.idx  user_context.h.48D73DF4B1F5C8BD.idx  utilities.h.AA5B246CF81956D9.idx  vector.hpp.B898F3317356884D.idx
src/: Recreation.h  integers.hpp  memory.hpp  numbers.hpp  os.hpp  result.hpp  utilities.h  vector.hpp
src/converters/: converters.h
src/converters/decimal_to_string/: decimal_to_string.c  decimal_to_string.h
src/converters/int_to_string/: int_to_string.c  int_to_string.h
src/converters/string_to_double/: string_to_double.c  string_to_double.h
src/converters/string_to_int/: string_to_int.c  string_to_int.h
src/memory/: memory.cpp  memory.hpp
src/utilities/: architecture.h  compiler.h  os.h  os.hpp  types.h  user_context.c  user_context.h  utilities.h  windows.hpp
